# pkg/api/generated_mobilier_image.go
@@ -115,6 +115,9 @@ type MobilierImage struct {
 
 	// parent id
 	ParentID int32 `json:"parent_id,omitempty"`
+
+	// comment of the temoin
+	TemoinComment string `json:"temoinComment,omitempty"`
 }
 
 // Validate validates this mobilier image
