# pkg/api/generated_monument_lieu.go
@@ -106,6 +106,9 @@ type MonumentLieu struct {
 
 	// parent id
 	ParentID int32 `json:"parent_id,omitempty"`
+
+	// comment of the temoin
+	TemoinComment string `json:"temoinComment,omitempty"`
 }
 
 // Validate validates this monument lieu
