# pkg/api/generated_personne_morale_creation_body.go
@@ -91,6 +91,9 @@ type PersonneMoraleCreationBody struct {
 
 	// draft
 	Draft bool `json:"draft,omitempty"`
+
+	// comment of the temoin
+	TemoinComment string `json:"temoinComment,omitempty"`
 }
 
 // Validate validates this personne morale creation body
