# pkg/api/generated_personne_physique.go
@@ -115,6 +115,9 @@ type PersonnePhysique struct {
 
 	// parent id
 	ParentID int32 `json:"parent_id,omitempty"`
+
+	// comment of the temoin
+	TemoinComment string `json:"temoinComment,omitempty"`
 }
 
 // Validate validates this personne physique
